# HidrocarburosNoConvencionales

./: .gitignore  LICENSE  README.md
docs/: mkdocs.yml
docs/docs/: index.md
hidrocarburosnoconvencionales/: Makefile  __init__.py  plots.py  pyproject.toml
hidrocarburosnoconvencionales/hidrocarburosnoconvencionales/: dataset.py  features.py
hidrocarburosnoconvencionales/hidrocarburosnoconvencionales/modeling/: predict.py
hidrocarburosnoconvencionales/modeling/: train.py
