[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hidrocarburosnoconvencionales"
version = "0.0.1"
description = "An\u00c3\u00a1lisis de Producci\u00c3\u00b3n de Pozos de Gas y Petr\u00c3\u00b3leo No Convencional"
authors = [
  { name = "Data Scientist Suarez Jonatan" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["hidrocarburosnoconvencionales"]
force_sort_within_sections = true
